2003 Jun 15

    * NSInvocation+additions: added unknown selector creation; created a
    workaround for gnustep DO bug
    * STObjCRuntime: Fixed creation of signature.

2003 May 11 Stefan Urbanek <urbanek@host.sk>

    * Fixed linking of some bundles

2003 May 10 Stefan Urbanek <urbanek@host.sk>

    * Fixed linking under mingw32
    * STBundleInfo: implemented framework searching
    * STEnvironment: includeFramework: new method.

2003 May 2   Stefan Urbanek <urbanek@host.sk>

    * STBundleInfo: added objectReferenceDictionary; removed unnecessary ST 
      prefix from ScriptingInfo.plist keys and added warnings for the change.;
      check for existence of ScriptingInfo.plist before using it
    * Modules: reflect changes to STBundleInfo
    * Updated all GNUmakefiles to use new path
    * STEnvironment: added initDefault - this will replace confusing 
      defaultScriptingEnvironment.
    * Added Applications
    * Added ScriptPapers application

2003 Apr 22  Stefan Urbanek <urbanek@host.sk>

    * Added library reference documentation generated by autogsdoc.
    * Added TroubleShooting.txt document
    
2003 Apr 21  Stefan Urbanek <urbanek@host.sk>

    * Version 0.7.1

2003 Apr 04  David Ayers  <d.ayers@inode.at>

    * STEngine.h: Fixed declaration to match implementation to avoid
    compiler warnings.
    * STEnvironment.h: Ditto.
    * STScriptsManager.h: Ditto.
    * STLanguage.h: Corrected declaration.
    * STScriptsManager.m: Added needed interface declaration.
    * GNUmakefile:  Added flags to show all warnings except for import.
    * Module/ObjectiveC/GNUmakefile:  Added flags to show all warnings
    except for import.
    * Module/Foundation/GNUmakefile:  Added flags to show all warnings
    except for import.
    * Module/AppKit/AppKitExceptions.m: Used variable to supress compiler
    warnings.
    * Module/AppKit/AppKitNotifications.m: Ditto.
    * Module/AppKit/GNUmakefile:  Added flags to show all warnings except
    for import.