@@ -9,9 +9,7 @@
     <h1><a name="title$STObjCRuntime">STObjCRuntime autogsdoc generated documentation</a></h1>
     <h3>Authors</h3>
     <dl>
-      <dt>Stefan Urbanek(<a href="mailto:urbanek@host.sk"><code>
-        urbanek@host.sk
-      </code></a>)</dt>
+      <dt>Stefan Urbanek (<a href="mailto:urbanek@host.sk"><code>urbanek@host.sk</code></a>)</dt>
       <dd>
       </dd>
     </dl>
