@@ -1,0 +1,11 @@
+/* 2003 Aug 5 */
+
+#import <Foundation/NSObject.h>
+
+@class STEngine;
+
+@interface STMethod:NSObject
+- (NSString *)source;
+- (NSString *)methodName;
+- (NSString *)languageName;
+@end
