@@ -1,0 +1,18 @@
+/* 2003 Aug 5 */
+
+#import <StepTalk/STMethod.h>
+
+@implementation STMethod
+- (NSString *)source
+{
+    [self _notImplemented:_cmd];
+}
+- (NSString *)methodName
+{
+    [self _notImplemented:_cmd];
+}
+- (NSString *)languageName
+{
+    [self _notImplemented:_cmd];
+}
+@end
